# powerlifting-meet-api

./: .gitignore  IMPLEMENTATION-PLAN-enrichment.md  IMPLEMENTATION-PLAN-new-sources.md  SCHEMA.md  pyproject.toml
.github/workflows/: scrape.yml
src/powerlifting_meets/: classify.py  gemini_client.py  llm_extract.py  llm_geo.py  models.py  normalize.py  runner.py
src/powerlifting_meets/scrapers/: adfpf.py  apf.py  apl.py  apo.py  base.py  cpu.py  (+26 more)
tests/: conftest.py  test_apf.py  test_apo.py  test_british_pl.py  test_brittle_scrapers.py  test_classify.py  test_cpu.py  test_ical.py  test_ipf.py  test_ipl.py  test_irish.py  test_llm_extract.py  test_llm_geo.py  test_metal_militia.py  test_models.py  test_normalize.py  test_nsf.py  test_powerlifting_america.py  test_powerlifting_com.py  test_raw100.py  test_rps.py  test_runner.py  test_spf.py  test_tribe_subclasses.py  test_ukipl.py  test_usapl.py  test_uspa.py  test_uspc.py  test_wabdl.py
tests/eval/: test_extraction_eval.py
tests/fixtures/: adfpf_tribe.json  apf_calendar.html  apl_tribe.json  apo_events.html  britishpl_championships.html  britishpl_events.html  cpu_event_2026-bridge-city-classic.html  cpu_sitemap.xml  ipf_calendar.html  ipl_calendar.ics  irish_calendar.html  metal_militia_meets.html  npl_tribe.json  nsf_terminliste.html  nzpu_tribe.json  pa_events_page1.json  powerlifting_australia_tribe.json  powerlifting_com_tribe.json  powerlifting_united_tribe.json  rps_meets.html  spf_events_page1.json  spf_meets_sanity.json  ukipl_tribe.json  usapl_calendar.html  uspa_events_page1.json  uspc_tockify.json  wabdl.ics
(+4 files in other folders)
