[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "powerlifting-meets"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.35",
    "ruff>=0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/powerlifting_meets"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
